commit-10 Fixed issue with peer streams not being visible

--- a/styles/Meet.module.scss
+++ b/styles/Meet.module.scss
@@ -60,4 +60,5 @@ $border-radius: 8px;
 .video {
 	width: $videowidth;
 	border-radius: $border-radius;
+	aspect-ratio: 2/1.5
 }
